--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -3,18 +3,19 @@ version: "3.1"
 services: 
 
   redis:
-    image: redis:4.0.5-alpine
-    command: ["redis-server", "--appendonly", "yes"]
-    hostname: redis
-    networks:
-      - redis-net
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
     volumes:
-      - redis-data:/data
+      - "cours:/var/lib/redis/data"
+    entrypoint: redis-server --appendonly yes
+    restart: always
       
   database:
     image: "postgress:latest"
     restart: "unless-stopped"
-    environnement:
+    environment:
       POSTGRES_DB: "coursdevops"
       POSTGRES_USER: "eve"
       POSTGRES_PASSWORD: "azerty"
@@ -24,4 +25,5 @@ services:
     - "5432:5432"
 
 volumes:
-  cours:
+  dbsql:
+  dbredis:
