--- a/.gitignore
+++ b/.gitignore
@@ -88,4 +88,15 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
+# .tfvars files are managed as part of configuration and so should be included in
+# version control.
+#
+# example.tfvars
+**/.terraform/*
+*.tfvars
+*.tfstate
+*.tfstate.*
+
 # End of https://www.gitignore.io/api/go,linux,macos,windows
